Modificación endpoint PUT /itachallenge/api/v1/user/solution/-incluir el parámetro 'status' en el JSON